Fix scrollbar squeezing content using overflow: scroll and add accordion-active styles

--- a/src/main/client/src/app/components/sidebar/sidebar.component.less
+++ b/src/main/client/src/app/components/sidebar/sidebar.component.less
@@ -1,6 +1,7 @@
 @list-item-text-color: rgb(147, 101, 63);
 @list-item-text-color-active: rgb(183, 172, 139);
 @list-item-border-width: 1px;
+@accordion-active-text-color: rgb(139, 116, 73);
 @scrollbar-color: rgb(94, 79, 50);
 
 img {
@@ -15,8 +16,8 @@ button {
 }
 
 .accordion {
-    background-color: #eee;
-    color: #444;
+    background-color: transparent;
+    color: rgb(111, 110, 108);
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -24,7 +25,25 @@ button {
     text-align: left;
     outline: none;
     font-size: 15px;
+    font-weight: bold;
     transition: 0.4s;
+}
+
+.accordion:after {
+    content: '\25bc'; /* Unicode character for "down arrow" sign */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.accordion-active {
+    color: @accordion-active-text-color;
+}
+  
+.accordion-active:after {
+    content: "\25b2"; /* Unicode character for "up arrow" sign */
+    color: @accordion-active-text-color;
 }
 
 .active {
@@ -37,7 +56,7 @@ button {
 
 .monster-list-group {
     max-height: 80vh;
-    overflow: auto;
+    overflow: scroll;
 }
 
 .list-group-item {
